added strategy-backtest controller and fixed some issue with the strategy-report
