# api/controllers/index.js
@@ -5,4 +5,5 @@ function __export(m) {
 Object.defineProperty(exports, "__esModule", { value: true });
 __export(require("./strategy.controller"));
 __export(require("./strategy-event.controller"));
+__export(require("./strategy-backtest.controller"));
 //# sourceMappingURL=index.js.map
