# api/controllers/index.ts
@@ -1,2 +1,3 @@
 export * from './strategy.controller';
 export * from './strategy-event.controller';
+export * from './strategy-backtest.controller';
